# apt-blitz

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  rust-toolchain.toml
debian/: apt-blitz.default  apt-blitz.service  changelog  control  copyright  install  postinst  prerm  rules
debian/init.d/: apt-blitz
man/: apt-blitz.1
rpm/: apt-blitz.spec
src/: buffer.rs  cache.rs  coalescer.rs  config.rs  downloader.rs  ftp.rs  lib.rs  main.rs  proxy.rs  rate_limit.rs
tests/: origin_form.rs  rate_limit_integration.rs  stress_cache.rs  stress_coalescer.rs  stress_general.rs  stress_multithread.rs  stress_throttle.rs
tests/common/: mod.rs
