[package]
name = "apt-blitz"
version = "0.6.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "socks"] }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
http = "1"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_yaml = "0.9"
dirs = "6"
tower-service = "0.3"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio-socks = "0.5"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
rand = "0.8"
hex = "0.4"

# Re-use sha2 from main deps in tests
sha2 = "0.10"
